# frappe-remote-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
specs/001-frappe-remote-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frappe-remote-cli/checklists/: requirements.md
specs/001-frappe-remote-cli/contracts/: cli-commands.md
specs/002-extended-cli-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-extended-cli-features/checklists/: requirements.md
specs/002-extended-cli-features/contracts/: cli-contract.md
specs/003-interactive-prompts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-interactive-prompts/checklists/: requirements.md
specs/003-interactive-prompts/contracts/: cli-contract.md
src/frappe_cli/: __init__.py  cli.py  client.py  config.py  formatter.py  mcp_server.py  version_check.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_formatter.py
tests/unit/: test_bulk.py  test_formatter.py  test_interactive_prompts.py  test_mcp.py  test_metadata.py  test_reports.py  test_schema.py  test_version_check.py
