[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frappe-remote-cli"
version = "0.1.6"
description = "A Click-based CLI to communicate with remote Frappe sites."
readme = "README.md"
authors = [
    { name = "Developer" }
]
keywords = ["frappe", "cli", "click", "python", "api-client", "remote-connection"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "requests>=2.25.0",
    "tabulate>=0.8.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vanbaopham160-clnp/frappe-remote-cli"
Repository = "https://github.com/vanbaopham160-clnp/frappe-remote-cli.git"
"Bug Tracker" = "https://github.com/vanbaopham160-clnp/frappe-remote-cli/issues"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.6.0",
    "responses>=0.18.0",
    "ruff>=0.1.0",
]

[project.scripts]
frappe-cli = "frappe_cli.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "F401"]


